apps/kromgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kromgo
  namespace: kromgo
  annotations:
    external-dns.alpha.kubernetes.io/target: ""
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: kromgo.atoca.house
    http:
      paths:
      - backend:
          service:
            name: kromgo
            port:
              number: 80
        path: /
        pathType: Prefix
